add openapi v3 endpoint
