# gen/http/openapi3.yaml
@@ -4,7 +4,7 @@ info:
     description: Service for User CRUD
     version: "1.0"
 servers:
-    - url: http://localhost:8089
+    - url: http://0.0.0.0:8088
 paths:
     /auth/token:
         post:
@@ -30,6 +30,15 @@ paths:
                                 type: string
                                 example: Ab et ad id debitis voluptatem.
                             example: Consectetur et quod explicabo.
+    /openapi3.json:
+        get:
+            tags:
+                - user
+            summary: Download ./gen/http/openapi3.json
+            operationId: user#/openapi3.json
+            responses:
+                "200":
+                    description: File downloaded
     /user:
         get:
             tags:
@@ -48,7 +57,7 @@ paths:
             security:
                 - jwt_header_Authorization:
                     - api:access
-    /users/create:
+    /user/create:
         post:
             tags:
                 - user
@@ -72,7 +81,7 @@ paths:
                                 type: string
                                 example: Quia quis voluptates quia.
                             example: Temporibus saepe facilis.
-    /users/delete:
+    /user/delete:
         delete:
             tags:
                 - user
@@ -98,7 +107,7 @@ paths:
             security:
                 - jwt_header_Authorization:
                     - api:access
-    /users/update:
+    /user/update:
         put:
             tags:
                 - user
